# Holistically-Nested-Edge-Detection

./: .gitignore  CMakeLists.txt  README.md  hed.cpp
dependencies/: CMakeLists.txt
